--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,18 +12,18 @@ jobs:
     steps:
       - checkout
 
-      #- restore_cache:
-      #    key: jars-{{ checksum "build.gradle" }}-{{ checksum  "showtime-client/app/build.gradle" }}
+      - restore_cache:
+          key: jars-{{ checksum "showtime-client/build.gradle" }}-{{ checksum  "showtime-client/app/build.gradle" }}
 
       - run: 
           name: Build 
           working_directory: ./showtime-client
           command: ./gradlew androidDependencies
 
-      #- save_cache:
-      #    paths:
-      #      - ~/.gradle
-      #    key: jars-{{ checksum "build.gradle" }}-{{ checksum  "showtime-client/app/build.gradle" }}
+      - save_cache:
+          paths:
+            - ~/showtime-client/.gradle
+          key: jars-{{ checksum "showtime-client/build.gradle" }}-{{ checksum  "showtime-client/app/build.gradle" }}
 
       - run: 
           name: Test
