Setup server build process and configure Django project
Define docker-compose file to build backend with two containers:
 - Server
 - Postgres DB

Define basic configuration of Django project.

Solves: hello-backend https://trello.com/c/Z7AVkgjx
                      https://trello.com/c/MPGTjli3

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 *.bin
 *.lock
 *.iml
+*.pyc
 cache.properties
 local.properties
 
 showtime-client/.idea/
 showtime-client/app/build/
 showtime-client/app/proguard-rules.pro
+
+showtime-server/app/migrations
